Footer: fix volume pricing popover overlap

--- a/assets/quick-order-list.css
+++ b/assets/quick-order-list.css
@@ -36,7 +36,7 @@ quick-order-list .quantity__button {
   .quick-order-list__total {
     position: sticky;
     bottom: 0;
-    z-index: 1;
+    z-index: 2; /* Prevent volume pricing popover overlap */
     background-color: rgb(var(--color-background));
   }
 
